@@ -21,6 +21,7 @@
 - [ ] Maybe add Analytics/Adsense ?
 - [ ] Place other social network buttons (addthis/flattr)
 ***** TODO Trying cmake as a global build system
+      CLOCK: [2016-04-26 mar. 23:44]--[2016-04-27 mer. 00:18] =>  0:34
       CLOCK: [2016-03-13 dim. 22:22]--[2016-03-13 dim. 22:49] =>  0:27
   CLOCK: [2015-10-28 mer. 19:29]--[2015-10-28 mer. 19:44] =>  0:15
   CLOCK: [2015-09-08 mar. 21:39]--[2015-09-08 mar. 21:42] =>  0:03
@@ -69,6 +70,11 @@
     - [-] Remove unneeded logger/ files
       - [X] Remove autoconf files
       - [ ] What to do with po/ directpry ?
+	- Maybe in a top-level dir, test it with cmake
+	- [ ] We must find a way to call xgettext to extract translatable messages 
+              from sources
+	- [ ] We have to correctly set logger_src (or _src_list)
+        - [ ] We must call xgettext on logger sources to extract messages
       - [ ] Add ROADMAP content here (and TODO content also)
       - [ ] Compare DEPENDENCIES with top-evel one
       - [ ] How to add ChangeLog content sorted by date
