@@ -35,7 +35,8 @@ OVERALL TODO
    FT is the result of `sh FT.sh`
 
 * v0.0.5-248 (29 Oct. 2015 - ???) SLOC ??? FT ??:??
-- (7) Start to remove logger unneeded files
+- (8) Start to hanle translation with cmake
+- Start to remove logger unneeded files
 - Finished correct project setup
 - Partially fixed the logger long-path issue
 - Fix the resources.cfg generation and media location
